Auth service created and working. Will integrate next into program